--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -4,17 +4,17 @@
 
 ## Abstract:
 
-This white paper introduces TokenID, a proposal to secure decentralized tokens with the integration of off-chain metadata. TokenID generates an open-source API service providing a JSON data structure, enabling various integration possibilities for decetranlized service providers. By incorporating off-chain metadata, TokenID increases security, ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms; while making data updates easy and secure. 
+This paper introduces TokenID, a proposal to secure decentralized tokens with the integration of off-chain metadata. TokenID generates an open-source API service providing a signefd JSON data structure, enabling various integration possibilities for decetranlized service providers. By incorporating off-chain metadata, TokenID increases security, ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The signed JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms; while making data updates easy and secure. 
 
 ## Introduction
 
 ## 1.1 Background
 
-In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing token standards with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format.
+In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing token standards with off-chain metadata, secure metadata updates, cross-chain compatibility, and signed JSON data.
 
 ## 1.2 Objectives
 
-TokenID aims to establish a robust and versatile token ecosystem by incorporating off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
+TokenID aims to establish a more secure and versatile token ecosystem by incorporating off-chain metadata, secure metadata updates, cross-chain compatibility, and a signed JSON format. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
 
 ## The Importance of Off-Chain Metadata, Cross-Chain Compatibility, and JSON Structure
  
