--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -11,7 +11,7 @@ This paper introduces TokenID, a proposal to secure decentralized tokens with th
 In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing token standards with off-chain metadata, secure metadata updates, cross-chain compatibility, and signed JSON data.
 
 ## 1.2 Objectives
-TokenID aims to establish a more secure and versatile token ecosystem by incorporating off-chain metadata, secure metadata updates, cross-chain compatibility, and a signed JSON format. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
+TokenID aims to establish a more secure and versatile token ecosystem by incorporating off-chain metadata, secure metadata updates, cross-chain compatibility, and a signed JSON data format. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
 
 ## The Importance of Off-Chain Metadata, Cross-Chain Compatibility, and JSON Structure
  
@@ -29,7 +29,7 @@ TokenID enables the inclusion of tokens from different blockchains, promoting in
 ## Protocol Overview: Off-Chain Metadata Integration, Secure Metadata Updates, and JSON Structure  
 
 ## 3.1 API Service Architecture
-TokenID utilizes an open-source API service as a gateway for accessing off-chain metadata. Standardized APIs allow querying applications to request token-specific information from the API service.  
+TokenID generates an open-source API service as a gateway for accessing off-chain metadata. Standardized APIs allow querying applications to request token-specific information, that can be independtly verified.   
 
 ## 3.2 Token Owner Access and Secure Metadata Updates
 
