--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -3,7 +3,7 @@
 ## Securing blockchain tokens with Off-Chain Metadata
 
 ## Abstract:
-This paper introduces TokenID, a proposal to secure decentralized tokens with the integration of off-chain metadata. TokenID generates an open-source API service providing a signed JSON data structure, enabling various integration possibilities for decetranlized service providers. By incorporating off-chain metadata, TokenID increases security, ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The signed JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms; while making data updates easy and secure. 
+This paper introduces TokenID, a proposal to improve the security of decentralized tokens with the integration of off-chain metadata. TokenID generates an open-source API service providing signed JSON data structures, enabling various integration possibilities for decetranlized service providers. By incorporating off-chain metadata, TokenID increases security, ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The signed JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms; while making data updates easy and secure. 
 
 ## Introduction
 
